update config and index files

--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: In the Garage
 email: sannielee@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Thoughts on tech, women in tech, pop culture, and living abroad in Germany and China.
-baseurl: "blog" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site
 twitter_username: geekrockchick24
 github_username:  psannielee
 
