--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: sannielee@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Thoughts on tech, women in tech, pop culture, and living abroad in Germany and China.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+url: "sannielee.com" # the base hostname & protocol for your site
 twitter_username: geekrockchick24
 github_username:  psannielee
 
